# frack

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.forgejo/workflows/: nix.yaml
.github/workflows/: nix.yaml
examples/: burn_demo.rs
nix/: package.nix  sbom-app.nix  sbom.nix  screenshot-fuzz.nix  screenshots-test.nix  screenshots-up-to-date.nix  update-screenshots.nix
sample-scores/: README.md
src/: burn.rs  config.rs  lib.rs  library.rs  main.rs  tuner.rs  viewer.rs
